# contra

./: .auto-claude-security.json  .auto-claude-status  .claude_settings.json  .dockerignore  .env.devnet  .env.example  .env.local  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.grafana  Dockerfile.prometheus  LICENSE  Makefile  README.md  buildkit-gc-fragment.json  contra_transfer_load_test.md  description.md  docker-compose.devnet.yml  docker-compose.yml  generate_profiling.py  grafana-contra-dashboard.json  init-primary-hba.sh  init-primary.sql  invariants_verification_report.md  load_testing.md  package-lock.json  prometheus.railway.yml  prometheus.yml  rust-toolchain.toml  secret_scan_report.txt  security-scan-results.json  shell.nix  simplify_proposed_changes.md  validator.Dockerfile  versions.env  yellowstone-config.json
auth/: Cargo.toml  Makefile  README.md
auth/src/: config.rs  db.rs  error.rs  jwt.rs  lib.rs  main.rs  models.rs  pool_status.rs
auth/src/routes/: challenge.rs  login.rs  mod.rs  register.rs  verify_wallet.rs  wallets.rs
auth/tests/: integration.rs
bench-tps/: .env.sample  .env.sample.devnet  .gitignore  BOTTLENECK_ANALYSIS.md  Cargo.toml  README.md  admin-keypair.json
bench-tps/scripts/: run.sh
bench-tps/src/: args.rs  background.rs  bench_metrics.rs  load.rs  load_deposit.rs  load_withdraw.rs  main.rs  rpc.rs  setup.rs  setup_deposit.rs  setup_withdraw.rs  types.rs
contra-escrow-program/program/: Cargo.toml  build.rs
contra-escrow-program/program/src/: constants.rs  entrypoint.rs  error.rs  events.rs  instructions.rs  lib.rs
contra-escrow-program/program/src/processor/: add_operator.rs  allow_mint.rs  block_mint.rs  create_instance.rs  deposit.rs  process_emit_event.rs  release_funds.rs  remove_operator.rs  reset_smt_root.rs  set_new_admin.rs
contra-escrow-program/program/src/state/: allowed_mint.rs  discriminator.rs  instance.rs  mod.rs  operator.rs
contra-escrow-program/tests/fuzz/: .gitignore  Cargo.toml  README.md
contra-escrow-program/tests/fuzz/src/: lib.rs
contra-withdraw-program/program/: Cargo.toml  build.rs
contra-withdraw-program/program/src/: constants.rs  discriminator.rs  entrypoint.rs  error.rs  events.rs  instructions.rs  lib.rs
contra-withdraw-program/program/src/processor/: mod.rs  process_emit_event.rs  (+1 more)
gateway/: Cargo.toml  Makefile
gateway/src/: auth.rs  db.rs  lib.rs  metrics.rs
gateway/tests/: auth_integration.rs
indexer/: .dockerignore  Cargo.toml  Makefile
indexer/config/: example-indexer.toml  example-operator.toml
indexer/config/local/: indexer-contra.toml  indexer-private-channel.toml  indexer-solana.toml  operator-contra.toml  operator-private-channel.toml  operator-solana.toml
indexer/config/railway/: indexer-contra.toml  indexer-private-channel.toml  indexer-solana.toml  operator-contra.toml  operator-private-channel.toml  operator-solana.toml
indexer/src/: CHANNELS_EXPLAINED.md  channel_utils.rs  config.rs  lib.rs  metrics.rs  shutdown_utils.rs  test_utils.rs
indexer/src/api/: mod.rs  routes.rs  types.rs
indexer/src/error/: account.rs  datasource_rpc.rs  indexer.rs  mod.rs  operator.rs  storage.rs  transaction.rs
indexer/src/indexer/: backfill.rs  checkpoint.rs  indexer.rs  mod.rs  reconciliation.rs  resync.rs  transaction_processor.rs
indexer/src/operator/: constants.rs  db_transaction_writer.rs  feepayer_monitor.rs  fetcher.rs  mod.rs  operator.rs  processor.rs  reconciliation.rs
indexer/src/storage/: mod.rs
indexer/tests/: postgres_db_test.rs  reconciliation_db_test.rs  reconciliation_e2e_test.rs  remint_e2e_test.rs  runbook_drills.rs
integration/: Cargo.toml  INTEGRATION_PLAN.md  Makefile  README.md  integration_coverage_improvement_plan.md  integration_enhancement.md
integration/tests/: helpers.rs  setup.rs
integration/tests/contra/: integration.rs  test_node_config_validation.rs  test_sequencer_zero_deadline.rs  test_signatures_corruption_guard.rs  test_truncate_backup_failure.rs  test_truncate_lock_contention.rs  truncate.rs
integration/tests/indexer/: bootstrap_validation.rs  checkpoint_partial_flush.rs  db_migration_race.rs  gap_detection.rs  harness_sanity.rs  integration.rs  jit_mint_helper.rs  malformed_yellowstone_update.rs  mint_builder_validation.rs  mint_idempotency.rs  mock_rpc_retry.rs  operator_lifecycle.rs  parser_malformation.rs  pausable_mint.rs  pending_remint_storage.rs  permanent_delegate_mint.rs  processor_quarantine.rs  reconciliation.rs  reconciliation_compare.rs  reconciliation_e2e.rs  remint_flow.rs  remint_recovery.rs  resync.rs  sender_cancellation_drain.rs  sender_channel_close.rs  sender_fixtures.rs  sender_max_retries.rs  sender_mint_idempotency.rs  sender_mint_signature_failures.rs  sender_mint_validator_encodings.rs  sender_onchain_error_arms.rs  sender_poll_rpc_error.rs  sender_sign_and_send_error.rs  setup.rs  state_recovery_malformed.rs  storage_update_failure.rs  withdrawal_null_nonce.rs  yellowstone_inner_and_unknown.rs  yellowstone_reconnect_gap.rs  yellowstone_wiring.rs
integration/tests/private-channel/: integration.rs  test_node_config_validation.rs  test_sequencer_zero_deadline.rs  test_signatures_corruption_guard.rs  test_truncate_backup_failure.rs  test_truncate_lock_contention.rs  truncate.rs
k6/: run.sh  (+8 more)
private-channel-escrow-program/program/: Cargo.toml  build.rs
private-channel-escrow-program/program/src/: constants.rs  entrypoint.rs  error.rs  events.rs  instructions.rs
private-channel-escrow-program/tests/trident-tests/: Cargo.toml  README.md  Trident.toml  fuzz_escrow.rs  fuzz_reset_smt.rs  shared.rs
scripts/devnet/: Cargo.toml  README.md  devnet-test.sh
scripts/devnet/config/: indexer-contra.toml  indexer-private-channel.toml  indexer-solana.toml  operator-contra.toml  operator-private-channel.toml  operator-solana.toml
test_utils/: Cargo.toml
test_utils/geyser/: libyellowstone_grpc_geyser.so.sha256
test_utils/geyser/mac-files-fix/: Cargo.toml
test_utils/src/: indexer_helper.rs  lib.rs  mock_rpc.rs  mock_yellowstone.rs  operator_helper.rs  validator_helper.rs
(+591 files in other folders)
