[package]
name = "contra-gateway"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
clap = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
hyper-rustls = { workspace = true }
http-body-util = { workspace = true }
serde_json = { workspace = true }
rustls = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
