[package]
name = "private-channel-gateway"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
clap = { workspace = true }
private-channel-metrics = { path = "../metrics" }
hyper = { workspace = true }
hyper-util = { workspace = true }
jsonrpsee = { workspace = true }
hyper-rustls = { workspace = true }
http-body-util = { workspace = true }
base64 = { workspace = true }
bs58 = { workspace = true }
jsonwebtoken = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "postgres", "uuid"] }
uuid = { workspace = true }
rustls = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
chrono = { workspace = true }
auth = { path = "../auth" }
reqwest = { workspace = true, features = ["json"] }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
