[package]
name = "contra-integration"
version = "0.1.0"
edition = "2021"

[[test]]
name = "contra_integration"
path = "tests/contra/integration.rs"

[[test]]
name = "indexer_integration"
path = "tests/indexer/integration.rs"

[[test]]
name = "reconciliation_integration"
path = "tests/indexer/reconciliation.rs"

[features]
test-tree = ["contra-indexer/test-tree"]

[dependencies]
anyhow = "1.0.100"
base64 = { workspace = true }
chrono = { workspace = true }
contra-core = { path = "../core" }
contra-escrow-program-client = { path = "../contra-escrow-program/clients/rust" }
contra-indexer = { path = "../indexer", features = [
    "datasource-rpc",
    "datasource-yellowstone",
] }
contra-withdraw-program-client = { path = "../contra-withdraw-program/clients/rust" }
http-body-util = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
serde_json = { workspace = true }
solana-account-decoder-client-types = "2.3.10"
solana-client = { version = "2.3.10" }
solana-pubkey = "2.4.0"
solana-sdk = { workspace = true }
solana-sdk-ids = { workspace = true }
solana-system-interface = { workspace = true }
solana-test-validator = { workspace = true }
solana-transaction-status = { workspace = true }
spl-associated-token-account = { workspace = true }
spl-token = { workspace = true }
spl-token-2022 = { workspace = true }
sqlx = { workspace = true }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
test_utils = { path = "../test_utils" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
