[package]
name = "contra-escrow-program"
version = { workspace = true }
edition = { workspace = true }

[lib]
crate-type = ["cdylib", "lib"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(target_os, values("solana"))',
] }

[features]
no-entrypoint = []
idl = []
devnet = []

# Use smaller tree size for integration tests (with the indexer)
test-tree = []

[dependencies]
const-crypto = { workspace = true }
pinocchio = { workspace = true }
pinocchio-associated-token-account = { workspace = true }
pinocchio-log = { workspace = true }
pinocchio-pubkey = { workspace = true }
pinocchio-system = { workspace = true }
pinocchio-token = { workspace = true }
pinocchio-token-2022 = { workspace = true }
shank = { workspace = true }
spl-token-2022 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
sha2 = "0.10.9"
sparse-merkle-tree = "0.6.1"

[package.metadata.cargo-machete]
ignored = ["pinocchio-log"]
