[package]
name = "devnet-scripts"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
contra-escrow-program-client.workspace = true
contra-withdraw-program-client.workspace = true
solana-client = "2.3.10"
solana-sdk.workspace = true
solana-system-interface.workspace = true
spl-associated-token-account.workspace = true
spl-token.workspace = true
